styles.css
/* ... */
.wunderbyteTableFilter.row {
    margin: 0;
    flex-direction: column;
}

.showontop .wunderbyteTableFilter.row {
    margin: 0;
    flex-direction: row;
    justify-content: space-around;
}

.showontop aside {
    padding: 0;
}

.wunderbyteTableFilter .dd {
    padding: 10px;
    background: transparent;
    max-width: fit-content;
}

.wunderbyte_table_container .wunderbyteTableFilter .dropdownMenuButton {
    background: #fff;
    min-width: fit-content;
    width: 250px;
    text-align: start;
    height: auto;
    white-space: normal;
    border: 1px solid #d3d3d3bd;
}

.wunderbyte_table_container .wunderbyteTableFilter .dropdownMenuButton::after {
    position: absolute;
    right: 10px;
    height: 100%;
    align-items: center;
    justify-content: center;
    display: flex;
    top: 0;
    width: 20px;
    font-size: 17px;
}

.dropdowncontainer .dropdown-menu.show {
    width: 100%;
}

.dropdowncontainer .wunderbyterFilterList {
    margin: 0;
    padding: 0;
}

/* Berta related CSS ? */

.wunderbyte_table_components {
    background: #e9f0f3;
}

.wunderbyte_table_container.showontop .filterheader {
    background: #e9f0f3;
    padding: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.inactivefilter .wunderbyte_table_container.showontop .filterheader {
    display: none;
}

.wunderbyte_table_container.showontop .filterheader .wunderbyte_table_components {
    width: 100%;
}

.wunderbyteTableFilter .form-check-label {
    color: black;
}

.hierarchybutton {
    margin-bottom: 4px;
    position: relative;
}

.hierarchy .hierarchybutton::after {
    position: absolute;
    right: 10px;
    height: 100%;
    align-items: center;
    justify-content: center;
    display: flex;
    top: 0;
}

.dropdown-menu .filtersearch {
    position: absolute;
    height: 46px;
    top: -49px;
    left: -1px;
    width: calc(100% + 2px);
}

.dropdown-menu .labelsearch {
    display: none;
    position: absolute;
    height: 46px;
    top: -60px;
    z-index: 9999;
}

.dropdown-menu .labelsearch span {
    position: relative;
    color: rgba(15, 108, 191, .75);
    font-weight: bold;
    white-space: nowrap;
}

.dropdown-menu .labelsearch span::after {
    position: absolute;
    width: 110%;
    height: 10px;
    background: #fff;
    content: '';
    left: -5%;
    bottom: 2%;
    z-index: -10;
    border-radius: 2px;
}

.wunderbyteTableFilter .dropdown-item .form-check-label {
    white-space: normal;
    word-break: break-all;
}

@media screen and (max-width: 991px) {
    .wunderbyte_table_filter_on .wunderbyte_table_container {
        display: block;
    }

    .wunderbyte_table_filter_on .wunderbyte_table_container aside {
        max-width: 100%;
    }

    .wunderbyte_table_container .filterheader {
        padding: 0;
    }

    .wunderbyte_table_container aside {
        padding: 15px;
    }

    .wunderbyte_table_container .wunderbyteTableFilter .dd,
    .wunderbyte_table_container .wunderbyteTableFilter .dropdownMenuButton {
        max-width: 100%;
        width: 100%;
    }

    .showontop .wunderbyteTableFilter.row {
        flex-direction: column;
    }

}

.wunderbyte_table_calendar .calendar {
    height: 22rem;
    width: fit-content;
    background-color: white;
    border-radius: 0;
    border: 1px solid black;
    overflow: hidden;
    padding: 5px 5px 0 5px;
    margin-bottom: 2rem;
}

.wunderbyte_table_calendar .calendar-days .highlight-date {
    font-weight: bold;
    text-decoration: underline;
    /* Example text color */
}

.wunderbyte_table_calendar .calendar {
    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
}

.wunderbyte_table_calendar .calendar-header {
    background: white;
    display: flex;
    justify-content: space-between;
    border-radius: 0;
    align-items: center;
    font-weight: 700;
    color: black;
    padding: 10px;
    border-bottom: 1px solid black;

}

.wunderbyte_table_calendar .calendar-body {
    padding: 10px;
}

.wunderbyte_table_calendar .calendar-week-days {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    font-weight: 600;
    cursor: pointer;
    color: white;
}

.wunderbyte_table_calendar .calendar-week-days div:hover {
    color: black;
    transform: scale(1.2);
    transition: all .2s ease-in-out;
}

.wunderbyte_table_calendar .calendar-week-days div {
    display: grid;
    place-items: center;
    color: black;
    height: 50px;
}

.wunderbyte_table_calendar .calendar-days {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    gap: 4px;
    color: #0a0921;
}

.wunderbyte_table_calendar .calendar-days div {
    width: 37px;
    height: 33px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px;
    position: relative;
    cursor: pointer;
    animation: to-top 1s forwards;
    color: white;
    background: var(--primary);
    font-weight: 300;
}

.wunderbyte_table_calendar .month-picker {
    padding: 5px 10px;
    border-radius: 10px;
    cursor: pointer;
}

.wunderbyte_table_calendar .year-picker {
    display: flex;
    align-items: center;
}

.wunderbyte_table_calendar .year-change {
    height: 30px;
    width: 30px;
    border-radius: 50%;
    display: grid;
    place-items: center;
    margin: 0 10px;
    cursor: pointer;
}

.wunderbyte_table_calendar .year-change:hover {
    background-color: #9796f0;
    transition: all .2s ease-in-out;
    transform: scale(1.12);
}

.wunderbyte_table_calendar .calendar-footer {
    padding: 10px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

#year:hover {
    cursor: pointer;
    transform: scale(1.2);
    transition: all 0.2s ease-in-out;
}

.wunderbyte_table_calendar .calendar-days div span {
    position: absolute;
}

.wunderbyte_table_calendar .calendar-days div:hover {
    transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
    background-color: #0063a678;
    /* border-radius: 20%; */
    color: #f8fbff;
}
/* ... */

